feat: refactor integration tests to extend AbstractIT for shared functionality